# agent-setting

./: .gitignore  README.md  pyproject.toml  test_install.ps1
agent_setting/: __init__.py  __main__.py  backup.py  cli.py  config.py  detector.py  logger.py  uploader.py
test/: test_cross_platform.py  test_cross_platform_enhanced.py  test_logger.py  test_permission_handling.py  test_uploader.py
tests/: test_backup.py  test_cross_platform.py  test_cross_platform_enhanced.py
